# routes/employer.route.js
@@ -4,5 +4,5 @@ const { authEmployer } = require("../middlewares/auth")
 module.exports = (router) => {
     router.post('/employer/login', controller.login);
     router.post('/employee/add', authEmployer, controller.addEmployee);
-    router.post('/employee/list', authEmployer, controller.listEmployee);
+    router.get('/employee/list', authEmployer, controller.listEmployee);
 }
