# swagger.json
@@ -181,10 +181,71 @@
             }
         },
         "/api/v1/employee/list": {
-            "post": {
+            "get": {
                 "summary": "List all employee",
                 "tags": [
                     "Employer"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": {
+                            "$ref": "#/components/securitySchemes/bearerAuth"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Request successfully executed"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Request not found"
+                    },
+                    "default": {
+                        "description": "Unexpected error"
+                    }
+                }
+            }
+        },
+        "/api/v1/employee/login": {
+            "post": {
+                "summary": "Employee Login",
+                "tags": [
+                    "Employee"
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "$ref": "#/components/schemas/login"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Request successfully executed"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Request not found"
+                    },
+                    "default": {
+                        "description": "Unexpected error"
+                    }
+                }
+            }
+        },
+        "/api/v1/employee/get": {
+            "get": {
+                "summary": "Get employee details",
+                "tags": [
+                    "Employee"
                 ],
                 "security": [
                     {
